fix firefox's overlay gap

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -80,7 +80,7 @@ nav
         padding: 2em
         top: 0
         bottom: 0
-        width: 100%
+        width: 101% // fix for firefox (overlay tiny gap)
         transform: translateX(-100%)
         transition: transform .3s ease-in-out
         &.js-show-info
